Fixes gallery on mobile

--- a/src/components/gallery.module.scss
+++ b/src/components/gallery.module.scss
@@ -101,7 +101,7 @@
     top: 0;
     left: 0;
     z-index: 10;
-    height: 100vh;
+    min-height: -webkit-fill-available;
     width: 100vw;
     background-color: $color-neutral-black;
     grid-column-gap: rem(26px);
